# django-admin-applist-order

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
plans/: 02_add-integration-tests-plan.md  03_skip-unknown-models-plan.md  04_add-app-groups-plan.md  05_consolidate-app-list-setting-plan.md  06_uniform-app-group-ordering-plan.md  add-tests-plan.md  skip-unknown-models-plan.md
src/django_admin_applist_order/: apps.py  exceptions.py  group.py  legacy.py  middleware.py  reorder.py
tests/: settings.py  test_group.py  test_group_integration.py  test_legacy_settings.py  test_middleware_integration.py  test_middleware_settings.py  test_reorder.py  urls.py
