[project]
name = "django-admin-applist-order"
version = "0.5.0"
description = ""
authors = [
    { name = "Alon Palgy" }
]
readme = "README.md"
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
]

requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.6,<7.0.0)"
]


[tool.poetry]
packages = [{ include = "django_admin_applist_order", from = "src" }]

[dependency-groups]
dev = ["pytest", "pytest-django", "ruff"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

