[project]
name = "django-admin-applist-order"
version = "0.8.0"
description = "A simple Django middleware to reorder and group the admin app list from settings in"
authors = [
    { name = "Alon Palgy" }
]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
]

requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.6,<7.0.0)"
]


[tool.poetry]
packages = [{ include = "django_admin_applist_order", from = "src" }]

[dependency-groups]
dev = ["pytest", "pytest-django", "ruff"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/alon-p/django-admin-applist-order"
Bug = "https://github.com/alon-p/django-admin-applist-order/issues"

